# kate-fuzzyswitcher

./: CMakeLists.txt  katefuzzydocumentswitcher.desktop  plugin_katefuzzydocumentswitcher.cpp  plugin_katefuzzydocumentswitcher.h  sortfuzzyfilterproxymodel.cpp  sortfuzzyfilterproxymodel.h  ui.rc
